--- a/www/templates/tab-rooms.html
+++ b/www/templates/tab-rooms.html
@@ -1,14 +1,9 @@
 <ion-view view-title="Rooms">
   <ion-content>
-    <ion-list ng-show="rooms">
-      <ion-item class="item-icon-left" ng-repeat="room in rooms" type="item-text-wrap" ng-click="openChatRoom(room.id)">
-        <i class="icon {{room.icon}}"></i>
-        <h2>{{room.name}}</h2>
-      </ion-item>
-    </ion-list>
-    <ion-list ng-hide="rooms.length">
-      <ion-item class="textCenter">
-        <i class="icon ion-loading-c"></i> ALEX LEONETTI 23
+    <ion-list>
+      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="user in users" type="item-text-wrap" href="#">
+        <h2>{{user.name}}</h2>
+        <i class="icon ion-chevron-right icon-accessory"></i>
       </ion-item>
     </ion-list>
   </ion-content>
