--- a/www/templates/tab-rooms.html
+++ b/www/templates/tab-rooms.html
@@ -2,7 +2,7 @@
   <ion-content>
     <ion-list>
       <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="user in users" type="item-text-wrap" href="#">
-        <h2>{{user.name}}</h2>
+        <h2>{{user.displayName}}</h2>
         <i class="icon ion-chevron-right icon-accessory"></i>
       </ion-item>
     </ion-list>
