--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -18,6 +18,10 @@ navigation history that also transitions its views in and out.
   <ion-tab title="Edit Profile" icon-off="ion-ios7-gear-outline" icon-on="ion-ios7-gear" href="#/editprofile">
   </ion-tab>
 
+  <ion-tab title="Friends" icon-off="ion-ios-people-outline" icon-on="ion-ios-people" href="#/tab/friends">
+    <ion-nav-view name="tab-friends"></ion-nav-view>
+  </ion-tab>
+
   <!-- Logout Button -->
   <ion-tab title="Logout" icon-off="ion-ios7-gear-outline" icon-on="ion-ios7-gear" ng-click="logout()" href="">
   </ion-tab>
