--- a/www/templates/tab-rooms.html
+++ b/www/templates/tab-rooms.html
@@ -1,8 +1,13 @@
 <ion-view view-title="Rooms">
   <ion-content>
+    <label class="item item-input">
+      <i class="icon ion-search placeholder-icon"></i>
+      <input type="text" placeholder="Filter By Activity">
+    </label>
     <ion-list>
-      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="user in users" type="item-text-wrap" href="#">
+      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="user in users" type="item-text-wrap" href="#/profile/{{user.uid}}">
         <h2>{{user.displayName}}</h2>
+        <p>{{user.uid}}</p>
         <i class="icon ion-chevron-right icon-accessory"></i>
       </ion-item>
     </ion-list>
