--- a/www/templates/tab-chat.html
+++ b/www/templates/tab-chat.html
@@ -1,35 +1,18 @@
-<ion-view view-title="Chat Room {{ roomName }}">
+<ion-view view-title="Chat Room">
   <ion-content>
-    <ion-list ng-show="roomName">
-      <ion-item class="item item-input-inset">
-        <label class="item-input-wrapper">
-          <input type="text" ng-model="IM.textMessage" placeholder="Type in your message...">
-        </label>
-        <button ng-click="sendMessage(IM.textMessage)" class="button button-small button-balanced">
-          Send
-        </button>
-      </ion-item>
-      <ion-item ng-hide="chats" class="textCenter">
-        <i class="icon ion-loading-c"></i> Loading Chats
-      </ion-item>
-      <ion-item ng-if="chats.length == 0" class="textCenter">
-        <h4>No messages in this room. Send message to start.</h4>
-      </ion-item>
-      <ion-item class="" ng-repeat="chat in chats | orderBy:'createdAt':true" type="item-text-wrap">
-        <h4>{{chat.from}} :</h4>
-        <span am-time-ago="chat.createdAt" class="item-note">
-        </span>
-        <p>{{chat.message}}</p>
-        <ion-option-button class="button-assertive" ng-click="remove(chat)">
-          Delete
-        </ion-option-button>
-      </ion-item>
-    </ion-list>
-    <ion-list ng-hide="roomName">
-      <ion-item class="textCenter">
-        <h4>Please select a room to chat first.</h4>
-      </ion-item>
-    </ion-list>
-
+    <h1>CHAT</h1>
+    <ul>
+      <li ng-repeat="message in messages">
+       {{message.text}}
+      </li>
+    </ul>
+    <div class="list card padding">
+      <label class="item item-input">
+        <input type="text" ng-model="user.message">
+      </label>
+    </div>
+    <button ng-click="sendMessage(user.message)" class="button button-block button-positive activated">
+        Send
+    </button>
   </ion-content>
 </ion-view>
