--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -15,9 +15,12 @@ navigation history that also transitions its views in and out.
       <ion-nav-view name="tab-chat"></ion-nav-view>
   </ion-tab>
 
+  <ion-tab title="Edit Profile" icon-off="ion-ios7-gear-outline" icon-on="ion-ios7-gear" href="#/editprofile">
+  </ion-tab>
+
   <!-- Logout Button -->
   <ion-tab title="Logout" icon-off="ion-ios7-gear-outline" icon-on="ion-ios7-gear" ng-click="logout()" href="">
   </ion-tab>
 
-
 </ion-tabs>
+
