User can add friends and populate their friend list Can also access friends' profiles from friend list

--- a/www/templates/tab-friends.html
+++ b/www/templates/tab-friends.html
@@ -1,8 +1,8 @@
 <ion-view view-title="Friends">
   <ion-content>
     <ion-list>
-      <ion-item ng-repeat="friend in friends" href="#/tab/friends/{{friend.id}}">
-        {{friend.displayName}}
+      <ion-item ng-repeat="friend in friends" href="#/profile/{{friend[0]}}">
+        {{friend[1].displayName}}
       </ion-item>
     </ion-list>
   </ion-content>
