--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -6,16 +6,16 @@ navigation history that also transitions its views in and out.
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
   <!-- Rooms List Tab -->
-  <ion-tab title="Rooms" icon-off="ion-ios7-box-outline" icon-on="ion-ios7-box" href="#/tab/rooms">
+  <ion-tab title="Rooms" icon-off="ion-ios-home-outline" icon-on="ion-ios-home" href="#/tab/rooms">
       <ion-nav-view name="tab-rooms"></ion-nav-view>
   </ion-tab>
 
   <!-- Current Selected Chat Tab -->
-  <ion-tab title="Chat" icon-off="ion-ios7-chatboxes-outline" icon-on="ion-ios7-chatboxes" href="#/tab/chat">
+  <ion-tab title="Chat" icon-off="ion-ios-chatbubble-outline" icon-on="ion-ios-chatbubble" href="#/tab/chat">
       <ion-nav-view name="tab-chat"></ion-nav-view>
   </ion-tab>
 
-  <ion-tab title="Edit Profile" icon-off="ion-ios7-gear-outline" icon-on="ion-ios7-gear" href="#/editprofile">
+  <ion-tab title="Edit Profile" icon-off="ion-ios-compose-outline" icon-on="ion-ios-compose" href="#/editprofile">
   </ion-tab>
 
   <ion-tab title="Friends" icon-off="ion-ios-people-outline" icon-on="ion-ios-people" href="#/tab/friends">
@@ -23,7 +23,7 @@ navigation history that also transitions its views in and out.
   </ion-tab>
 
   <!-- Logout Button -->
-  <ion-tab title="Logout" icon-off="ion-ios7-gear-outline" icon-on="ion-ios7-gear" ng-click="logout()" href="">
+  <ion-tab title="Logout" icon-off="ion-android-exit" icon-on="ion-android-exit" ng-click="logout()" href="">
   </ion-tab>
 
 </ion-tabs>
