--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,3 +1,279 @@
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol, ul {
+  list-style: none;
+}
+blockquote, q {
+  quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
+ * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
+ * CSS STARTS HERE
+ * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
+ * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
+
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+html {
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  width: 100%;
+  height: 100%;
+  font-family: 'Lato', sans-serif;
+  font-size: 62.5%;
+}
+
+#back__button {
+  display: inherit;
+  color: rgba(255, 255, 255, 0.8);
+}
+
+/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
+ * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
+ * LOGIN PAGE
+ * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
+ * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
+
+ .nav__bar {
+   background-color: #91CC91;
+   color: white;
+ }
+
+ #login--wrapper {
+   background-color: #91CC91;
+ }
+
+ .logo {
+   display: block;
+   width: 150px;
+   margin: 50px auto;
+ }
+
+ .logo--text {
+   color: #fff;
+   font-size: 24px;
+   text-align: center;
+   text-transform: uppercase;
+   font-weight: 200;
+ }
+
+ .bold {
+   font-weight: 500;
+ }
+
+ #user--email--input,
+ #user--password--input {
+   background-color: #91CC91;
+   border: 2px solid #fff;
+   text-align: center;
+ }
+
+ #user--email--input {
+   border-top-left-radius: 5px;
+   border-top-right-radius: 5px;
+ }
+
+ #user--password--input {
+   border-bottom-left-radius: 5px;
+   border-bottom-right-radius: 5px;
+ }
+
+ #user--password--text,
+ #user--email--text {
+   text-align: center;
+   color: #fff;
+   font-size: 24px;
+ }
+
+ #user--password--text::-webkit-input-placeholder,
+ #user--email--text::-webkit-input-placeholder {
+    color: #fff;
+    line-height: 24px;
+    font-size: 18px;
+ }
+
+ #sign--in {
+   background-color: #fff;
+   border: 2px solid #fff;
+   width: 100px;
+   color: #91CC91;
+   border-radius: 5px;
+   margin: 20px auto;
+ }
+
+ #sign--in:hover {
+   border: 2px solid #5B805B;
+ }
+
+ #sign--in:active {
+   background-color: #91CC91;
+   color: #fff;
+   border: 2px solid #fff;
+ }
+
+ #create--user {
+   color: #fff;
+   border-color: #fff;
+   background-color: #91CC91;
+ }
+
+ /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
+  * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
+  * SIGNUP MODAL
+  * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
+  * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
+#signup--wrapper {
+  background-color: #91CC91;
+}
+
+#new--account--title,
+#new--account--cancel {
+  color: #5B805B;
+}
+
+#create--new--user {
+  margin: 100px 15px;
+}
+
+.signup--input {
+  background-color: #91CC91;
+  border: 2px solid #fff;
+}
+
+.top--input {
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.bottom--input {
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.input--text {
+  text-align: center;
+  color: #fff;
+  font-size: 24px;
+}
+
+.input--text::-webkit-input-placeholder {
+   color: #fff;
+   font-size: 18px;
+   line-height: 25px;
+}
+
+#signup--email--input,
+#signup--password--input,
+#signup--display--input {
+  color: white;
+  font-size: 24px;
+}
+
+#signup--user {
+  background-color: #fff;
+  border: 2px solid #fff;
+  width: 100px;
+  color: #91CC91;
+  border-radius: 5px;
+  margin: 20px auto;
+}
+
+#signup--user:hover {
+  border: 2px solid #5B805B;
+}
+
+#signup--user:active {
+  background-color: #91CC91;
+  color: #fff;
+  border: 2px solid #fff;
+}
+
+/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
+ * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
+ * TAB-ROOMS PAGE
+ * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
+ * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
+
+.room--item {
+  padding: 0px;
+}
+
+.room--item:first-child {
+  margin-top: 50px;
+}
+
+.room--item:last-child {
+  margin-bottom: 10px;
+}
+
+.room--activity {
+  color: #91CC91;
+  font-style: italic;
+  font-size: 12px;
+}
+
+
+/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
+ * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
+ * PROFILE PAGE
+ * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
+ * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
+#profile--wrapper {
+  margin-top: 50px;
+}
+
+/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
+ * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
+ * EXTRA
+ * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
+ * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
+
+
 #footer {
   position: absolute;
   bottom: 0;
@@ -20,7 +296,7 @@
   padding: 0;
   margin: 0;
   text-align: center;
-  background-color: #3d805b;
+  background-color: #91CC91;
 }
 
 .button--input:active,
@@ -35,7 +311,7 @@ p.button--input--text {
 }
 
 .button--camera {
-  background-color: #3d805b;
+  background-color: #91CC91;
   width: 50px;
   height: 100%;
   line-height: 50px;
@@ -69,8 +345,3 @@ p.button--input--text {
   padding: 0;
 }
 
-.nav__bar {
-  background-color: #3d805b;
-  color: white;
->>>>>>> Styled Chat
-}
