--- a/www/templates/tab-rooms.html
+++ b/www/templates/tab-rooms.html
@@ -1,14 +1,14 @@
 <ion-view view-title="Rooms">
+  <label class="item item-input">
+    <i class="icon ion-search placeholder-icon"></i>
+    <input type="text" placeholder="Filter" ng-model="query">
+  </label>
   <ion-content>
-    <label class="item item-input">
-      <i class="icon ion-search placeholder-icon"></i>
-      <input type="text" placeholder="Filter By Activity" ng-model="query">
-    </label>
     <ion-list>
-      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="user in users | filter:query" type="item-text-wrap" href="#/profile/{{user.uid}}" >
-        <h2>{{user.displayName}}</h2>
-        <span ng-repeat='interest in user.interests'>{{interest.activity}} &nbsp;</span>
-        <i class="icon ion-chevron-right icon-accessory"></i>
+      <ion-item class="item-remove-animate item-avatar item-icon-right room--item" ng-repeat="user in users | filter:query" type="item-text-wrap" href="#/profile/{{user.uid}}" >
+        <h2 id="room--username">{{user.displayName}}</h2>
+        <span class="room--activity" ng-repeat='interest in user.interests'>{{interest.activity}} &nbsp;</span>
+        <i class="icon ion-chevron-right icon-accessory" id="right--arrow--rooms"></i>
       </ion-item>
     </ion-list>
   </ion-content>
