--- a/www/templates/friendRequests.html
+++ b/www/templates/friendRequests.html
@@ -1,9 +1,8 @@
 <ion-view view-title="Friend Requests">
   <ion-content>
     <ion-list>
-      <!-- <ion-item ng-repeat="friend in friendRequests" href="#/profile/{{friend[0]}}"> -->
       <ion-item ng-repeat="friend in friendRequests">
-        {{friend[1].displayName}}
+        <h2 id="room--username">{{friend[1].displayName}}</h2>
         <button class="ion-checkmark-round rightButton" ng-click="acceptRequest(friend)"></button>
         <button class="ion-close-round rightButton" ng-click="rejectRequest(friend)"></button>
       </ion-item>
