--- a/www/templates/tab-friends.html
+++ b/www/templates/tab-friends.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Friends">
   <label class="item item-input">
     <i class="icon ion-search placeholder-icon"></i>
-    <input type="text" placeholder="Filter" ng-model="query">
+    <input type="text" placeholder="Friend" ng-model="query">
   </label>
   <ion-content>
     <ion-list>
