--- a/www/templates/friendRequests.html
+++ b/www/templates/friendRequests.html
@@ -9,7 +9,7 @@
   <ion-content>
     <ion-list>
       <ion-item ng-repeat="friend in friendRequests" class="friend--lower">
-        <h2 id="room--username">{{friend[1].displayName}}</h2>
+        <h2>{{friend[1].displayName}}</h2>
         <button class="ion-checkmark-round rightButton" ng-click="acceptRequest(friend)"></button>
         <button class="ion-close-round rightButton" ng-click="rejectRequest(friend)"></button>
       </ion-item>
