--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -2,12 +2,12 @@
   <ion-nav-back-button id="back__button"
     ng-click="myGoBack()"> &nbsp; Filter
   </ion-nav-back-button>
-  <h4>Signup</h4>
+  <h4>Profile</h4>
 </ion-nav-bar>
 
 <ion-view view-title="{{user.displayName}}">
   <ion-content class="padding" id="profile--wrapper">
-    <img ng-src="data:image/png;base64,{{user.profilepicture}}" style="width: 64px; height: 64px">
+    <img ng-src="data:image/png;base64,{{ profpic }}" style="width: 64px; height: 64px">
     <p>PROFILE PAGE</p>
     <div>{{user.bio}}</div>
     <ul>
