Working on edit profile

--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -7,7 +7,7 @@
 
 <ion-view view-title="{{user.displayName}}">
   <ion-content class="padding" id="profile--wrapper">
-    <img ng-src="data:image/png;base64,{{user.profilepicture}}" style="width: 64px; height: 64px">
+    <img ng-src="data:image/png;base64,{{ profpic }}" style="width: 64px; height: 64px">
     <p>PROFILE PAGE</p>
     <div>{{user.bio}}</div>
     <ul>
