--- a/www/templates/tab-rooms.html
+++ b/www/templates/tab-rooms.html
@@ -1,5 +1,9 @@
+<ion-nav-bar ng-controller="MyCtrl" class="nav__bar">
+</ion-nav-bar>
+<div id="ios--room--filler"></div>
+
 <ion-view view-title="Rooms">
-  <label class="item item-input">
+  <label class="item item-input" id="filter--rooms">
     <i class="icon ion-search placeholder-icon"></i>
     <input type="text" placeholder="Filter" ng-model="query">
   </label>
