--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Login">
   <ion-content class="padding" id="login--wrapper">
     <div class="list">
-      <img src="../img/logo-test.png" class="logo">
+      <img ng-src="img/logo-test.png" class="logo">
       <div class="logo--text">
           Actively <span class="bold">Connected</span>
       </div>
