--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -7,15 +7,20 @@
 
 <ion-view view-title="{{user.displayName}}">
   <ion-content class="padding" id="profile--wrapper">
-    <p class='page__title'>PROFILE PAGE</p>
-    <button ng-click='blockUser()'>Block User</button>
-    <img ng-src="data:image/png;base64,{{ profpic }}">
-    <h2 class='sections'>Bio</h2>
-    <div>{{user.bio}}</div>
-    <h2 class='sections'>Interests</h2>
-    <ul>
-        <li ng-repeat='interest in interests'>{{interest.activity}}</li>
-    </ul>
+    <div class='profile__box'>
+      <img ng-src="data:image/png;base64,{{ profpic }}" class='profpic'>
+      <div class='bio__info'>
+        <h2 class='sections'>{{user.displayName}}</h2>
+        <div>{{user.bio}}</div>
+      </div>
+    </div>
+    <div class='profile__box'>
+      <h2 class='sections'>Interests</h2>
+      <ul>
+          <li ng-repeat='interest in interests'>{{interest.activity}}</li>
+      </ul>
+    </div>
+    <button ng-show="sentReq">Friend Request Sent!</button>
   </ion-content>
   <button class='chat__button' ng-hide="blocked">
     <a href="#/messages/{{user.uid}}">CHAT WITH {{user.displayName}} HERE</a>
