Show prof pics in friendslist

--- a/www/templates/tab-friends.html
+++ b/www/templates/tab-friends.html
@@ -6,8 +6,9 @@
   <ion-content>
     <ion-list>
       <ion-item href="#/friends/friendrequests" ng-show="hasReq" class="friend--lower">View Friend Requests<div class="ion-alert rightButton"></div></ion-item>
-      <ion-item ng-repeat="friend in friends | filter:query" href="#/profile/{{friend[0]}}" class="item-remove-animate item-avatar item-icon-right friend--lower">
-        <h2>{{friend[1].displayName}}</h2>
+      <ion-item ng-repeat="friend in friends | filter:query" href="#/profile/{{friend.id}}" class="item-remove-animate item-avatar item-icon-right friend--lower">
+      <img ng-src="data:image/png;base64,{{friend.pic}}" style="width: 64px; height: 64px">
+        <h2>{{friend.displayName}}</h2>
         <i class="icon ion-chevron-right icon-accessory" id="right--arrow--rooms"></i>
       </ion-item>
     </ion-list>
