--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -6,8 +6,8 @@ navigation history that also transitions its views in and out.
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
   <!-- Rooms List Tab -->
-  <ion-tab title="Rooms" icon-off="ion-ios-home-outline" icon-on="ion-ios-home" href="#/tab/rooms">
-      <ion-nav-view name="tab-rooms"></ion-nav-view>
+  <ion-tab title="Search" icon-off="ion-ios-home-outline" icon-on="ion-ios-home" href="#/tab/search">
+      <ion-nav-view name="tab-search"></ion-nav-view>
   </ion-tab>
 
   <!-- Current Selected Chat Tab -->
