--- a/www/templates/editProfile.html
+++ b/www/templates/editProfile.html
@@ -3,23 +3,27 @@
     ng-click="myGoBack()"> &nbsp; Filter
   </ion-nav-back-button>
 </ion-nav-bar>
-<ion-view view-title="EditProfile" class='move__down'>
-    <ion-content>
+<ion-view view-title="EditProfile">
+    <ion-content class='padding' id="profile--wrapper">
     <div class='profile__box'>
-      <img ng-src="data:image/png;base64,{{ profilepic }}" class='profpic'>
-      <button class="nav__bar" ng-click="addMedia()">
-        Change Profile Picture!
-      </button>
+      <div class='profContainer'>
+        <img ng-src="data:image/png;base64,{{ profilepic }}" class='profpic' ng-click="addMedia()">
+        </img>
+        <h2 class='clicky' ng-click="addMedia()"><span>Edit Profile Picture</span></h2>
+      </div>
       <form class='bio__info'>
-          <textarea ng-model='birds' style='background-color:lightgrey;'>Add Biography Here</textarea>
+          <textarea ng-model='birds' placeholder='{{bio}}' style='background-color:lightgrey;'>Add Biography Here</textarea>
           <button ng-click='addBio(birds)' class="nav__bar">Add Biography</button>
       </form>
   </div>
+  <div class='profile__box'>
+    <h2 class='sections'>Interests</h2>
     <ul>
-        <h1 ng-repeat='interest in interests' ng-model='hi' ng-click='removeInterest({{interest.activity}})'>{{interest.activity}}</h1>
+        <h1 ng-repeat='interest in interests' ng-model='hi' ng-click='removeInterest({{interest.activity}})' class='fill__text'>{{interest.activity}}</h1>
     </ul>
     <select class='nav__bar' ng-model = 'activityOptions' ng-change='addInterest(activityOptions)'>
       <option ng-repeat='activity in activities' value='{{activity}}'>{{ activity }}</option>
     </select>
+  </div>
     </ion-content>
 </ion-view>
